# CycPepPerm

./: .bumpversion.cfg  .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.html  README.md  environment.yml  requirements.txt  setup.cfg  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
data/: Cyclic_peptide_membrane_permeability_random20percent_dw_RFClass.csv  Cyclic_peptide_membrane_permeability_random80percent.csv  Cyclic_peptide_membrane_permeability_random80percent_mordred.csv  perm_random20_test_dw.csv  perm_random20_test_mordred.csv  perm_random20_test_raw.ods  perm_random80_train_raw.ods  testset_RF_mordred.csv  testset_RandomForest_DataWarrior.csv  testset_XGBoost_DataWarrior.csv  testset_XGBoost_mordred.csv
data/raw/: Cyclic_peptide_membrane_permeability_random80percent.csv  Cyclic_peptide_membrane_permeability_random80percent_mordred.csv
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
models/: rf_random_dw.pkl  rf_random_mordred.pkl  rfclass_random_dw.pkl  xgb_random_dw.pkl  xgb_random_mordred.pkl
notebooks/: 0_process_data.ipynb  1_train.ipynb  2_evaluate_test.ipynb  polyfitperm.ipynb
src/cyc_pep_perm/: __init__.py  __main__.py  cli.py  version.py
src/cyc_pep_perm/data/: __init__.py  descriptors.py  paths.py  processing.py
src/cyc_pep_perm/models/: __init__.py  randomforest.py  randomforest_class.py  xgboost.py
tests/: __init__.py  test_randomforest.py  test_version.py
